syntax = "proto3";

option csharp_namespace = "Libraries.Nba.GrpcContracts.V1";

package greet.v1;

// The greeting service definition.
service GreeterV1 {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message containing the user's name.
message GoodbyeRequest {
  string name = 1;
}

// The response message containing the greetings.
message GoodbyeReply {
  string message = 1;
}
